...
    <string name="format_plus_prefix" translatable="false">+%1$s</string>

    <string name="icon_content_description_about" translatable="false">@string/screen_about_overview_title</string>
    <string name="icon_content_description_appearance" translatable="false">@string/screen_settings_appearance_title</string>
    <string name="icon_content_description_back">Back</string>
    <string name="icon_content_description_cancel">Cancel</string>
...
    <string name="icon_content_description_feels_like" translatable="false">@string/screen_forecast_common_forecast_name_feels_like</string>
    <string name="icon_content_description_find_location">Find location</string>
    <string name="icon_content_description_font" translatable="false">@string/screen_settings_font_title</string>
    <string name="icon_content_description_git_hub" translatable="false">@string/screen_about_overview_button_git_hub</string>
    <string name="icon_content_description_humidity" translatable="false">@string/screen_forecast_common_forecast_name_humidity</string>
    <string name="icon_content_description_location">Location</string>
    <string name="icon_content_description_max_temperature">Max temperature</string>
...
    <string name="icon_content_description_moonrise" translatable="false">@string/screen_forecast_common_sun_and_moon_moonrise_title</string>
    <string name="icon_content_description_moonset" translatable="false">@string/screen_forecast_common_sun_and_moon_moonset_title</string>
    <string name="icon_content_description_order" translatable="false">@string/screen_settings_order_title</string>
    <string name="icon_content_description_pressure" translatable="false">@string/screen_forecast_common_forecast_name_pressure</string>
    <string name="icon_content_description_probability_of_precipitation" translatable="false">@string/screen_forecast_common_forecast_name_probability_of_precipitation</string>
    <string name="icon_content_description_rain" translatable="false">@string/screen_forecast_common_forecast_name_rain</string>
    <string name="icon_content_description_reset">Reset</string>
    <string name="icon_content_description_search" translatable="false">@string/screen_search_overview_bar_placeholder</string>
    <string name="icon_content_description_settings" translatable="false">@string/screen_settings_overview_title</string>
    <string name="icon_content_description_snow" translatable="false">@string/screen_forecast_common_forecast_name_snow</string>
    <string name="icon_content_description_sun">Sun</string>
    <string name="icon_content_description_sunrise" translatable="false">@string/screen_forecast_common_sun_and_moon_sunrise_title</string>
    <string name="icon_content_description_sunset" translatable="false">@string/screen_forecast_common_sun_and_moon_sunset_title</string>
    <string name="icon_content_description_temperature" translatable="false">@string/screen_forecast_common_forecast_name_temperature</string>
    <string name="icon_content_description_units" translatable="false">@string/screen_settings_units_title</string>
    <string name="icon_content_description_uv_index" translatable="false">@string/screen_forecast_common_forecast_name_uv_index</string>
    <string name="icon_content_description_visibility" translatable="false">@string/screen_forecast_common_forecast_name_visibility</string>
    <string name="icon_content_description_warning">Warning</string>
    <string name="icon_content_description_weather_day_broken_clouds">Broken clouds (Day)</string>
...
    <string name="screen_about_overview_text_flagpedia_net">Country flags provided by Flagpedia.net</string>
    <string name="screen_about_overview_text_niklas_bednarczyk">This app was created by Niklas Bednarczyk</string>
    <string name="screen_about_overview_text_open_weather">Weather data provided by OpenWeather</string>

    <string name="screen_forecast_alerts_title">Alerts</string>

    <string name="screen_forecast_common_forecast_name_cloudiness">Cloudiness</string>
...

    <string name="screen_forecast_overview_alerts_event_name_fallback">Alert</string>
    <string name="screen_forecast_overview_current_weather_title">Current weather</string>
    <string name="screen_forecast_overview_daily_title">Daily forecast</string>
    <string name="screen_forecast_overview_hourly_title">Hourly forecast</string>
    <plurals name="screen_forecast_overview_precipitation_headline_breaking">
        <item quantity="one">A break in precipitation in %1$s minute</item>
...
    <string name="screen_settings_appearance_description">Change theme and color scheme</string>
    <string name="screen_settings_appearance_header_color_scheme">Color scheme</string>
    <string name="screen_settings_appearance_header_theme">Theme</string>
    <string name="screen_settings_appearance_title">Appearance</string>
    <string name="screen_settings_appearance_value_color_scheme_blue">Blue</string>
...
    <string name="screen_settings_font_axis_grade">Grade</string>
    <string name="screen_settings_font_axis_lowercase_height">Lowercase height</string>
    <string name="screen_settings_font_axis_slant">Slant</string>
    <string name="screen_settings_font_axis_thin_stroke">Thin stroke</string>
    <string name="screen_settings_font_axis_uppercase_height">Uppercase height</string>
...
    <string name="screen_settings_units_header_precipitation">Precipitation</string>
    <string name="screen_settings_units_header_pressure">Pressure</string>
    <string name="screen_settings_units_header_temperature">Temperature</string>
    <string name="screen_settings_units_header_wind_speed">Wind speed</string>
    <string name="screen_settings_units_title">Units</string>
...
