<resources>
    <string name="app_name">NB Weather</string>
</resources>