...
import de.niklasbednarczyk.nbweather.core.ui.screens.scaffold.snackbar.NBSnackbarModel
import de.niklasbednarczyk.nbweather.core.ui.screens.scaffold.topappbar.NBTopAppBarActionModel
import de.niklasbednarczyk.nbweather.core.ui.screens.scaffold.topappbar.NBTopAppBarItem
import de.niklasbednarczyk.nbweather.core.ui.settings.NBSettings
import de.niklasbednarczyk.nbweather.feature.forecast.screens.overview.views.ForecastOverviewItemView

const val FORECAST_OVERVIEW_SCREEN_LAZY_COLUMN_TAG = "ForecastOverviewScreenLazyColumn"

@Composable
fun ForecastOverviewRoute(
    viewModel: ForecastOverviewViewModel = hiltViewModel(),
    openDrawer: () -> Unit,
    navigateToForecastAlerts: (coordinates: NBCoordinatesModel) -> Unit,
...
